syntax = "proto3";

option csharp_namespace = "Shop.ClientService.Protos";

service ClientService {
  rpc CreateClient (CreateClientRequest) returns (CreateClientResponse);
}

message CreateClientRequest {
  string name = 1;
  string password = 2;
  string email = 3;
}

message CreateClientResponse {
  string id = 1;
  string status = 2;
}